# SensorizedNeedleRobot

./: README.md  adaptive_guide.urdf
adaptive_guide/: CMakeLists.txt  README.md  package.xml
adaptive_guide/launch/: adaptive_guide_launch.py
adaptive_guide/src/: stage_state_builder.cpp
adaptive_guide_description/: CMakeLists.txt  README.md  package.xml
adaptive_guide_description/env-hooks/: adaptive_guide_description.dsv.in
adaptive_guide_description/models/adaptive_guide/: adaptive_guide.urdf  adaptive_guide.urdf.xacro  model.config
adaptive_guide_description/models/adaptive_guide/meshes/: Link3.dae  Phantom.dae  PhantomTarget.dae
adaptive_guide_gazebo/: CMakeLists.txt  README.md  package.xml
adaptive_guide_gazebo/launch/: gazebo_launch.py
needle_path_control/: CMakeLists.txt  README.md  package.xml
needle_path_control/config/: needle_controller.yaml  needle_controller_effort.yaml  needle_controller_velocity.yaml
needle_path_control/examples/: example_position.cpp
needle_path_control/launch/: needle_position_launch.py
needle_path_control/urdf/: adaptive_guide.xacro.urdf
needle_path_control/urdf/meshes/: Phantom.dae
needle_path_control/urdf/meshes/meshes/: Link1.dae
needle_pose_sensors/: CMakeLists.txt  README.md  package.xml
needle_pose_sensors/launch/: needle_pose_sensors_launch.py
needle_pose_sensors/src/: emulate_sensors_node.cpp
stage_control/: CMakeLists.txt  README.md  package.xml
stage_control/config/: hardware_config.yaml  stage_config.yaml  virtual_config.yaml
stage_control/launch/: stage_control_launch.py
stage_control/scripts/: run_experiment_node.cpp
stage_control/src/: stage_control_node.cpp  stage_emulated_node.cpp  stage_hardware_node.cpp  stage_virtual_node.cpp
stage_control_interfaces/: CMakeLists.txt  README.md  package.xml
stage_control_interfaces/action/: MoveStage.action
